# APIC

./: .env.example  .gitignore  ClaudeReview  Dockerfile  Dockerfile.api  Dockerfile.frontend  Makefile  PACKAGE_REVIEW.md  README.md  README_Dev.md  TROUBLESHOOTING.md  alembic.ini  docker-compose.yml  install.bat  install.sh  main.py  pip.conf  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-optional.txt  requirements.txt
alembic/: env.py
alembic/versions/: 20240101_000000_initial_schema.py
config/: __init__.py  agent_config.py  agents.yaml  settings.py
config/prompts/: README.md  interview_architect_prompts.yaml
docs/: AGENT_CONFIGURATION.md  API_CONTRACTS.md  API_CONTRACT_REVIEW.md  ARCHITECTURE.md  ARCHITECTURE_GUIDE.md  COMPREHENSIVE_CONTEXT_USAGE.md  DEVELOPER_GUIDE.md  INTERVIEW_SCRIPT_GENERATION.md  OPERATIONS_GUIDE.md  PROCESS_OVERVIEW.md  PROMPT_MANAGEMENT_SYSTEM.md  SYSTEM_REVIEW_AND_ENHANCEMENTS.md  USER_GUIDE.md
frontend/: app.py  components.py  config.py  styles.py  utils.py
frontend/pages/: 1_Projects.py  2_New_Project.py  3_Project.py
scripts/: __init__.py  init_db.py  init_schema.sql  install_utils.py  migrate_add_url_support.py  migrate_add_url_support.sql  setup.sh
scripts/migrations/: 001_add_document_category.sql
src/: __init__.py
src/agents/: __init__.py  base.py  gap_analyst.py  google_adk.py  hypothesis.py  ingestion.py  interview.py  reporting.py  solution.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  documents.py  health.py  projects.py  routes.py  workflow.py
src/models/: __init__.py  schemas.py
src/services/: __init__.py  analytics.py  db_retry.py  interview_script_generator.py  llm_cache.py  llm_factory.py  llm_retry.py  retry.py  state_manager.py  webhook_manager.py  workflow.py
src/utils/: __init__.py  db_health.py  env_validator.py  helpers.py  install_verifier.py  logging_config.py  migration_utils.py  prompt_manager.py  startup.py  validators.py
tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_document_category.py  test_enhanced_features.py  test_google_adk.py  test_installation.py  test_interview_architect.py  test_models.py  test_state_manager_category.py  test_workflow.py
